[package]
name = "os"
version = "0.1.0"
authors = ["Voodlaz <47495939+Voodlaz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
x86_64 = "0.12.2"
rlibc = "1.0.0"
volatile = "0.2.6"
linked_list_allocator = "0.8.6"
